<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.askdial.mrr.fragments.Contactus">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/contact_image"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="16dp"
            app:srcCompat="@drawable/mrr_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/company_head_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contacttxt1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/company_contactus_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/address" />

            <TextView
                android:id="@+id/company_telephone_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/contacttxt2"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/company_contactus_telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/contactno" />

            <TextView
                android:id="@+id/company_email_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/contacttxt3"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/company_contactus_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/emailaddress" />

        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>